--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,9 +1,6 @@
 # Chains
-/core/chains/evm/bulletprooftxmanager @samsondav @archseer
-/core/chains/evm/client @spooktheducks @samsondav
-/core/chains/evm/estimator @samsondav @archseer
-/core/chains/evm/headtracker @pinebit @samsondav
-/core/chains/evm/log @jmank88 @spooktheducks 
+/core/chains/evm/headtracker @pinebit @samsondav @prashantkumar1982
+/core/chains/evm/log @jmank88 @prashantkumar1982 @connorwstein
 /core/chains/evm @samsondav @prashantkumar1982
 /core/chains/terra @connorwstein @jmank88
 
