--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,22 +1,23 @@
 name: Integration Tests
 on:
-  push:
   pull_request:
+env:
+  solana_ref: develop # Note: this may not make sense to be develop and may need to be a more stable branch
 jobs:
-  # changes:
-  #   runs-on: ubuntu-latest
-  #   outputs:
-  #     src: ${{ steps.changes.outputs.src }}
-  #   steps:
-  #     - uses: dorny/paths-filter@v2
-  #       id: changes
-  #       with:
-  #         filters: |
-  #           src:
-  #             - '**/*.go'
-  #             - '**/*go.sum'
-  #             - '**/*go.mod'
-  #             - '.github/workflows/integration-tests.yml'
+  changes:
+    runs-on: ubuntu-latest
+    outputs:
+      src: ${{ steps.changes.outputs.src }}
+    steps:
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            src:
+              - '**/*.go'
+              - '**/*go.sum'
+              - '**/*go.mod'
+              - '.github/workflows/integration-tests.yml'
 
   build-chainlink:
     environment: integration
@@ -25,21 +26,22 @@ jobs:
       contents: read
     name: Build Chainlink Image
     runs-on: ubuntu-latest
-    # needs: changes
-    # if: ${{ needs.changes.outputs.src == 'true' }}
+    needs: changes
+    if: ${{ needs.changes.outputs.src == 'true' }}
     steps:
       - name: Checkout the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@f25a3a9f25bd5f4c5d77189cab02ff357b5aedeb # v2.4.1
       - name: Build Image
-        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/build-image@e85d58fbfdbf6b14c09e3974a40022f15a0dbaf1
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/build-image@010068ddc7dd55cd4439159a485390aa651fdd39 # v2.0.3
         with:
           cl_repo: smartcontractkit/chainlink
           cl_ref: ${{ github.sha }}
+          dep_solana_sha: ${{ env.solana_sha }}
           push_tag: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}.dkr.ecr.${{ secrets.QA_AWS_REGION }}.amazonaws.com/chainlink:latest.${{ github.sha }}
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
 
-  smoke:
+  eth-smoke-tests:
     environment: integration
     permissions:
       checks: write
@@ -48,14 +50,13 @@ jobs:
       contents: read
     name: ETH Smoke Tests
     runs-on: ubuntu-latest
-    # needs: [changes, build-chainlink]
-    needs: [build-chainlink]
-    # if: ${{ needs.changes.outputs.src == 'true' }}
+    needs: [changes, build-chainlink]
+    if: ${{ needs.changes.outputs.src == 'true' }}
     steps:
       - name: Checkout the repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@f25a3a9f25bd5f4c5d77189cab02ff357b5aedeb # v2.4.1
       - name: Run Tests
-        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@v2.0.1
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@010068ddc7dd55cd4439159a485390aa651fdd39 # v2.0.3
         env:
           CHAINLINK_COMMIT_SHA: ${{ github.sha }}
           CHAINLINK_ENV_USER: ${{ github.actor }}
@@ -73,23 +74,63 @@ jobs:
           QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
           QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
 
-  # Skipped due to issues with passing secrets between environments. WIP
-  # solana:
-  #   permissions:
-  #     checks: write
-  #     pull-requests: write
-  #     id-token: write
-  #     contents: read
-  #   name: Solana Tests
-  #   needs: [changes, build-chainlink]
-  #   if: ${{ needs.changes.outputs.src == 'true' }}
-  #   uses: smartcontractkit/chainlink-solana/.github/workflows/e2e.yml@develop
-  #   with:
-  #     repo_name: smartcontractkit/chainlink-solana
-  #     ref: develop
-  #     cl_repo: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}.dkr.ecr.${{ secrets.QA_AWS_REGION }}.amazonaws.com/chainlink
-  #     cl_image: latest.${{ github.sha }}
-  #   secrets:
-  #     QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
-  #     QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
-  #     QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
+
+  ### Solana Section
+
+  solana-build-contracts:
+    environment: integration
+    permissions:
+      checks: write
+      pull-requests: write
+      id-token: write
+      contents: read
+    name: Solana Build Artifacts
+    runs-on: ubuntu-latest
+    container:
+      image: projectserum/build:v0.24.2
+      env:
+        RUSTUP_HOME: "/root/.rustup"
+        FORCE_COLOR: 1
+    needs: [changes]
+    if: ${{ needs.changes.outputs.src == 'true' }}
+    steps:
+      - name: Checkout the solana repo
+        uses: actions/checkout@f25a3a9f25bd5f4c5d77189cab02ff357b5aedeb # v2.4.1
+        with:
+          repository: smartcontractkit/chainlink-solana
+          ref: ${{ env.solana_sha }}
+      - name: Build contracts
+        uses: smartcontractkit/chainlink-solana/.github/actions/build_contract_artifacts@d7b1439734352a8eba3e1809cc8cf56bf60a2ed6 # stable action on 15/07/2022
+        with:
+          ref: ${{ env.solana_sha }}
+
+  solana-smoke-tests:
+    environment: integration
+    permissions:
+      checks: write
+      pull-requests: write
+      id-token: write
+      contents: read
+    name: Solana Smoke Tests
+    runs-on: ubuntu-latest
+    needs: [changes, build-chainlink, solana-build-contracts]
+    if: ${{ needs.changes.outputs.src == 'true' }}
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@f25a3a9f25bd5f4c5d77189cab02ff357b5aedeb # v2.4.1
+        with:
+          repository: smartcontractkit/chainlink-solana
+          ref: ${{ env.solana_sha }}
+      - name: Run Tests
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@010068ddc7dd55cd4439159a485390aa651fdd39 # v2.0.3
+        with:
+          test_command_to_run: make test_smoke
+          cl_repo: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}.dkr.ecr.${{ secrets.QA_AWS_REGION }}.amazonaws.com/chainlink
+          cl_image_tag: latest.${{ github.sha }}
+          download_contract_artifacts_path: contracts/target/deploy
+          artifacts_location: /home/runner/work/chainlink-solana/chainlink-solana/tests/e2e/logs
+          QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
+          QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
+          QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
+
+  ### End Solana Section
