Add general network

--- a/integration-tests/example.env
+++ b/integration-tests/example.env
@@ -12,6 +12,15 @@ export SLACK_API_KEY="xoxb-example-key"
 export SLACK_CHANNEL="C000000000"
 export SLACK_USER="U000000000"
 
-# Private Key and URLs, used for when testing actual testnets and mainnets
+# General EVM Settings
+export EVM_NAME="General EVM"
+export EVM_CHAIN_ID="1"
+export EVM_SIMULATED="false"
+export EVM_CHAINLINK_TRANSACTION_LIMIT="5000"
+export EVM_TRANSACTION_TIMEOUT="2m"
+export EVM_MINIMUM_CONFIRMATIONS="1"
+export EVM_GAS_ESTIMATION_BUFFER="1000"
+
+# Private values for general EVM networks, and for pre-configured ones
 export EVM_PRIVATE_KEYS="private,funding,keys"
 export EVM_URLS="wss://evm.url,wss://other.url"
