--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -209,6 +209,11 @@ PriceMin = '13 wei'
 LimitDefault = 12
 LimitMultiplier = '1.234'
 LimitTransfer = 100
+LimitOCRJobType = 1001
+LimitDRJobType = 1002
+LimitVRFJobType = 1003
+LimitFMJobType = 1004
+LimitKeeperJobType = 1005
 BumpMin = '100 wei'
 BumpPercent = 10
 BumpThreshold = 6
