--- a/core/services/chainlink/testdata/dump/empty-strings.env
+++ b/core/services/chainlink/testdata/dump/empty-strings.env
@@ -120,6 +120,12 @@ ETH_GAS_LIMIT_MULTIPLIER=
 ETH_GAS_LIMIT_TRANSFER=
 ETH_GAS_PRICE_DEFAULT=
 
+ETH_GAS_LIMIT_OCR_JOB_TYPE=
+ETH_GAS_LIMIT_DR_JOB_TYPE=
+ETH_GAS_LIMIT_VRF_JOB_TYPE=
+ETH_GAS_LIMIT_FM_JOB_TYPE=
+ETH_GAS_LIMIT_KEEPER_JOB_TYPE=
+
 GAS_ESTIMATOR_MODE=
 BLOCK_HISTORY_ESTIMATOR_BATCH_SIZE=
 BLOCK_HISTORY_ESTIMATOR_BLOCK_DELAY=
