--- a/core/services/chainlink/testdata/dump/evm-db.toml
+++ b/core/services/chainlink/testdata/dump/evm-db.toml
@@ -23,6 +23,11 @@ PriceDefault = '3.456 kwei'
 PriceMax = '9 mwei'
 LimitDefault = 99
 LimitMultiplier = '1.75'
+LimitOCRJobType = 9901
+LimitDRJobType = 9902
+LimitVRFJobType = 9903
+LimitFMJobType = 9904
+LimitKeeperJobType = 9905
 BumpMin = '159 wei'
 BumpPercent = 99
 BumpTxDepth = 99
