--- a/core/services/chainlink/testdata/dump/evm-overrides.toml
+++ b/core/services/chainlink/testdata/dump/evm-overrides.toml
@@ -31,6 +31,11 @@ PriceMax = '9 mwei'
 LimitDefault = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
+LimitOCRJobType = 9901
+LimitDRJobType = 9902
+LimitVRFJobType = 9903
+LimitFMJobType = 9904
+LimitKeeperJobType = 9905
 BumpMin = '987.654 kwei'
 BumpPercent = 2
 BumpThreshold = 10
@@ -105,6 +110,11 @@ PriceDefault = '100.2 kwei'
 LimitDefault = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
+LimitOCRJobType = 9901
+LimitDRJobType = 9902
+LimitVRFJobType = 9903
+LimitFMJobType = 9904
+LimitKeeperJobType = 9905
 BumpMin = '987.654 kwei'
 BumpPercent = 2
 BumpThreshold = 10
@@ -163,6 +173,11 @@ PriceDefault = '100.2 kwei'
 LimitDefault = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
+LimitOCRJobType = 9901
+LimitDRJobType = 9902
+LimitVRFJobType = 9903
+LimitFMJobType = 9904
+LimitKeeperJobType = 9905
 BumpMin = '987.654 kwei'
 BumpPercent = 2
 BumpThreshold = 10
@@ -223,6 +238,11 @@ PriceDefault = '100.2 kwei'
 LimitDefault = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
+LimitOCRJobType = 9901
+LimitDRJobType = 9902
+LimitVRFJobType = 9903
+LimitFMJobType = 9904
+LimitKeeperJobType = 9905
 BumpMin = '987.654 kwei'
 BumpPercent = 2
 BumpThreshold = 10
