--- a/core/services/chainlink/testdata/dump/full-custom.toml
+++ b/core/services/chainlink/testdata/dump/full-custom.toml
@@ -204,6 +204,11 @@ PriceMax = '9 mwei'
 LimitDefault = 1020304050
 LimitMultiplier = '1.003'
 LimitTransfer = 4294967295
+LimitOCRJobType = 9901
+LimitDRJobType = 9902
+LimitVRFJobType = 9903
+LimitFMJobType = 9904
+LimitKeeperJobType = 9905
 BumpMin = '987.654 kwei'
 BumpPercent = 2
 BumpThreshold = 10
