Avoid running linting CI check on release -> master

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -31,6 +31,7 @@ jobs:
 
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
+        if: ${{ github.event_name == 'push' || (github.event_name == 'pull_request' && (github.base_ref != 'master' && ! startsWith(github.head_ref, 'release/'))) }}
         with:
           # Optional: version of golangci-lint to use in form of v1.2 or v1.2.3 or `latest` to use the latest version
           version: v1.46.2
