--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,12 +1,12 @@
 name: Integration Tests
 on:
   pull_request:
-     # keep these paths identical to the integration-tests-ignored.yml
+    # keep these paths identical to the integration-tests-ignored.yml
     paths:
-      - '**/*.go'
-      - '**/*go.sum'
-      - '**/*go.mod'
-      - '.github/workflows/integration-tests.yml'
+      - "**/*.go"
+      - "**/*go.sum"
+      - "**/*go.mod"
+      - ".github/workflows/integration-tests.yml"
 env:
   solana_ref: develop # Note: this may not make sense to be develop and may need to be a more stable branch
 jobs:
@@ -58,6 +58,7 @@ jobs:
           cl_image_tag: latest.${{ github.sha }}
           artifacts_location: ./integration-tests/smoke/logs
           publish_check_name: EVM Smoke Test Results
+          publish_test_results_commit: ${{ github.sha }}
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
           QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
@@ -114,6 +115,7 @@ jobs:
           download_contract_artifacts_path: contracts/target/deploy
           artifacts_location: /home/runner/work/chainlink-solana/chainlink-solana/tests/e2e/logs
           publish_check_name: Solana Smoke Test Results
+          publish_test_results_commit: ${{ github.sha }}
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
           QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
