Adds Goerli Support to run tests

--- a/integration-tests/example.env
+++ b/integration-tests/example.env
@@ -2,6 +2,7 @@
 # `source ./integration-tests/.env`
 
 # Test Settings
+export KEEP_ENVIRONMENTS="Never" # Always | OnFail | Never
 export CHAINLINK_IMAGE="public.ecr.aws/chainlink/chainlink"
 export CHAINLINK_VERSION="1.5.1-root"
 export CHAINLINK_ENV_USER="Satoshi-Nakamoto"
