--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,5 +1,6 @@
 name: Integration Tests
 on:
+  push:
   pull_request:
     # keep these paths identical to the integration-tests-ignored.yml
     paths:
