Revert example.env changes (#7088)
* revert example.env changes

* Update integration-tests/example.env

Co-authored-by: Tate <tate.exon@smartcontract.com>

Co-authored-by: Tate <tate.exon@smartcontract.com>
Co-authored-by: Adam Hamrick <adam.hamrick@smartcontract.com>

--- a/integration-tests/example.env
+++ b/integration-tests/example.env
@@ -3,8 +3,8 @@
 
 # Test Settings
 export KEEP_ENVIRONMENTS="Never" # Always | OnFail | Never
-export CHAINLINK_IMAGE="795953128386.dkr.ecr.us-west-2.amazonaws.com/chainlink"
-export CHAINLINK_VERSION="develop-nonroot"
+export CHAINLINK_IMAGE="public.ecr.aws/chainlink/chainlink"
+export CHAINLINK_VERSION="1.6.0-root"
 export CHAINLINK_ENV_USER="Satoshi-Nakamoto"
 export TEST_LOG_LEVEL="info" # info | debug | trace
 
