Fixing linter issues

--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -39,7 +39,7 @@ jobs:
           # working-directory: somedir
 
           # Optional: golangci-lint command line arguments.
-          args: --timeout=10m0s --verbose
+          args: --timeout=10m0s
 
           # Optional: show only new issues if it's a pull request. The default value is `false`.
           only-new-issues: true
