--- a/core/services/chainlink/testdata/config-full.toml
+++ b/core/services/chainlink/testdata/config-full.toml
@@ -143,8 +143,8 @@ GasPriceBufferPercent = 12
 GasTipCapBufferPercent = 43
 BaseFeeBufferPercent = 89
 MaximumGracePeriod = 31
-RegistryCheckGasOverhead = '90'
-RegistryPerformGasOverhead = '18446744073709551615'
+RegistryCheckGasOverhead = 90
+RegistryPerformGasOverhead = 4294967295
 RegistrySyncInterval = '1h0m0s'
 RegistrySyncUpkeepQueueSize = 31
 TurnLookBack = 91
