--- a/core/services/chainlink/testdata/dump/full-custom.toml
+++ b/core/services/chainlink/testdata/dump/full-custom.toml
@@ -139,8 +139,8 @@ GasPriceBufferPercent = 50
 GasTipCapBufferPercent = 12
 BaseFeeBufferPercent = 7
 MaximumGracePeriod = 42
-RegistryCheckGasOverhead = '6'
-RegistryPerformGasOverhead = '900'
+RegistryCheckGasOverhead = 6
+RegistryPerformGasOverhead = 900
 RegistrySyncInterval = '1m0s'
 RegistrySyncUpkeepQueueSize = 99
 TurnLookBack = 67
