--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -8,7 +8,13 @@ on:
       - "**/*go.mod"
       - ".github/workflows/integration-tests.yml"
 env:
-  solana_ref: develop # Note: this may not make sense to be develop and may need to be a more stable branch
+  solana_sha: develop # Note: this may not make sense to be develop and may need to be a more stable branch
+
+# Only run 1 of this workflow at a time per PR
+concurrency:
+  group: integration-tests-chainlink-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   build-chainlink:
     environment: integration
@@ -21,7 +27,7 @@ jobs:
       - name: Checkout the repo
         uses: actions/checkout@f25a3a9f25bd5f4c5d77189cab02ff357b5aedeb # v2.4.1
       - name: Build Image
-        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/build-image@010068ddc7dd55cd4439159a485390aa651fdd39 # v2.0.3
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/build-image@e3bf7a2d54543beb94ad4151ca2a3837d62c2592 # v2.0.9
         with:
           cl_repo: smartcontractkit/chainlink
           cl_ref: ${{ github.sha }}
@@ -40,16 +46,16 @@ jobs:
     name: ETH Smoke Tests
     runs-on: ubuntu-latest
     needs: [build-chainlink]
+    env:
+      CHAINLINK_COMMIT_SHA: ${{ github.sha }}
+      CHAINLINK_ENV_USER: ${{ github.actor }}
+      TEST_TRIGGERED_BY: core-CI-eth
+      TEST_LOG_LEVEL: debug
     steps:
       - name: Checkout the repo
         uses: actions/checkout@f25a3a9f25bd5f4c5d77189cab02ff357b5aedeb # v2.4.1
       - name: Run Tests
-        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@7d405e28e1419c0a48198793e6647005c409f4cf # v2.0.4
-        env:
-          CHAINLINK_COMMIT_SHA: ${{ github.sha }}
-          CHAINLINK_ENV_USER: ${{ github.actor }}
-          TEST_TRIGGERED_BY: core-CI
-          TEST_LOG_LEVEL: debug
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@e3bf7a2d54543beb94ad4151ca2a3837d62c2592 # v2.0.9
         with:
           test_command_to_run: make test_smoke_simulated args="-nodes=30"
           test_download_vendor_packages_command: make gomod
@@ -58,9 +64,15 @@ jobs:
           cl_image_tag: latest.${{ github.sha }}
           artifacts_location: ./integration-tests/smoke/logs
           publish_check_name: EVM Smoke Test Results
+          triggered_by: ${{ env.TEST_TRIGGERED_BY }}
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
           QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
+      - name: cleanup
+        if: always()
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/cleanup@e3bf7a2d54543beb94ad4151ca2a3837d62c2592 # v2.0.9
+        with:
+          triggered_by: ${{ env.TEST_TRIGGERED_BY }}
 
   ### Solana Section
 
@@ -99,6 +111,11 @@ jobs:
     name: Solana Smoke Tests
     runs-on: ubuntu-latest
     needs: [build-chainlink, solana-build-contracts]
+    env:
+      CHAINLINK_COMMIT_SHA: ${{ github.sha }}
+      CHAINLINK_ENV_USER: ${{ github.actor }}
+      TEST_TRIGGERED_BY: core-CI-solana
+      TEST_LOG_LEVEL: debug
     steps:
       - name: Checkout the repo
         uses: actions/checkout@f25a3a9f25bd5f4c5d77189cab02ff357b5aedeb # v2.4.1
@@ -106,7 +123,7 @@ jobs:
           repository: smartcontractkit/chainlink-solana
           ref: ${{ env.solana_sha }}
       - name: Run Tests
-        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@7d405e28e1419c0a48198793e6647005c409f4cf # v2.0.4
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/run-tests@e3bf7a2d54543beb94ad4151ca2a3837d62c2592 # v2.0.9
         with:
           test_command_to_run: make test_smoke
           cl_repo: ${{ secrets.QA_AWS_ACCOUNT_NUMBER }}.dkr.ecr.${{ secrets.QA_AWS_REGION }}.amazonaws.com/chainlink
@@ -114,8 +131,14 @@ jobs:
           download_contract_artifacts_path: contracts/target/deploy
           artifacts_location: /home/runner/work/chainlink-solana/chainlink-solana/tests/e2e/logs
           publish_check_name: Solana Smoke Test Results
+          triggered_by: ${{ env.TEST_TRIGGERED_BY }}
           QA_AWS_REGION: ${{ secrets.QA_AWS_REGION }}
           QA_AWS_ROLE_TO_ASSUME: ${{ secrets.QA_AWS_ROLE_TO_ASSUME }}
           QA_KUBECONFIG: ${{ secrets.QA_KUBECONFIG }}
+      - name: cleanup
+        if: always()
+        uses: smartcontractkit/chainlink-github-actions/chainlink-testing-framework/cleanup@e3bf7a2d54543beb94ad4151ca2a3837d62c2592 # v2.0.9
+        with:
+          triggered_by: ${{ env.TEST_TRIGGERED_BY }}
 
   ### End Solana Section
