--- a/core/services/chainlink/testdata/dump/evm-overrides.toml
+++ b/core/services/chainlink/testdata/dump/evm-overrides.toml
@@ -62,6 +62,7 @@ SamplingInterval = '5s'
 NoNewHeadsThreshold = '5m0s'
 PollFailureThreshold = 3
 PollInterval = '1m0s'
+SelectionMode = 'HighestHead'
 
 [EVM.OCR]
 ObservationTimeout = '8m0s'
@@ -139,6 +140,7 @@ SamplingInterval = '5s'
 NoNewHeadsThreshold = '5m0s'
 PollFailureThreshold = 3
 PollInterval = '1m0s'
+SelectionMode = 'HighestHead'
 
 [[EVM.Nodes]]
 Name = 'primary_42_1'
@@ -202,6 +204,7 @@ SamplingInterval = '5s'
 NoNewHeadsThreshold = '5m0s'
 PollFailureThreshold = 3
 PollInterval = '1m0s'
+SelectionMode = 'HighestHead'
 
 [[EVM.Nodes]]
 Name = 'sendonly_43_1'
@@ -267,6 +270,7 @@ SamplingInterval = '5s'
 NoNewHeadsThreshold = '5m0s'
 PollFailureThreshold = 3
 PollInterval = '1m0s'
+SelectionMode = 'HighestHead'
 
 [[EVM.Nodes]]
 Name = 'primary_1337_1'
