--- a/core/services/chainlink/testdata/dump/evm-overrides.env
+++ b/core/services/chainlink/testdata/dump/evm-overrides.env
@@ -33,6 +33,7 @@ MINIMUM_CONTRACT_PAYMENT_LINK_JUELS=123456789
 NODE_NO_NEW_HEADS_THRESHOLD=5m
 NODE_POLL_FAILURE_THRESHOLD=3
 NODE_POLL_INTERVAL=1m
+NODE_SELECTION_MODE=HighestHead
 
 EVM_EIP1559_DYNAMIC_FEES=true
 ETH_GAS_BUMP_PERCENT=2
