--- a/internal/config/docs.toml
+++ b/internal/config/docs.toml
@@ -723,6 +723,8 @@ PollFailureThreshold = 3 # Default
 #
 # Set to zero to disable poll checking.
 PollInterval = '10s' # Default
+# SelectionMode controls node selection strategy: HighestHead or RoundRobin.
+SelectionMode = 'HighestHead' # Default
 
 [EVM.OCR]
 # ContractConfirmations sets `OCR.ContractConfirmations` for this EVM chain.
