--- a/core/services/chainlink/testdata/dump/full-custom.env
+++ b/core/services/chainlink/testdata/dump/full-custom.env
@@ -228,6 +228,9 @@ AUTO_PPROF_MUTEX_PROFILE_FRACTION=21
 AUTO_PPROF_MEM_THRESHOLD=1gb
 AUTO_PPROF_GOROUTINE_THRESHOLD=50
 
+PYROSCOPE_AUTH_TOKEN=pyroscope-token
+PYROSCOPE_SERVER_ADDRESS=http://localhost:4040
+
 DATABASE_DEFAULT_IDLE_IN_TX_SESSION_TIMEOUT=1h
 DATABASE_DEFAULT_LOCK_TIMEOUT=1m
 DATABASE_DEFAULT_QUERY_TIMEOUT=1s
