--- a/core/services/chainlink/testdata/dump/empty-strings.env
+++ b/core/services/chainlink/testdata/dump/empty-strings.env
@@ -232,6 +232,9 @@ AUTO_PPROF_MUTEX_PROFILE_FRACTION=
 AUTO_PPROF_MEM_THRESHOLD=
 AUTO_PPROF_GOROUTINE_THRESHOLD=
 
+PYROSCOPE_AUTH_TOKEN=
+PYROSCOPE_SERVER_ADDRESS=
+
 DATABASE_DEFAULT_IDLE_IN_TX_SESSION_TIMEOUT=
 DATABASE_DEFAULT_LOCK_TIMEOUT=
 DATABASE_DEFAULT_QUERY_TIMEOUT=
