--- a/core/services/chainlink/testdata/dump/empty-strings.env
+++ b/core/services/chainlink/testdata/dump/empty-strings.env
@@ -234,6 +234,7 @@ AUTO_PPROF_GOROUTINE_THRESHOLD=
 
 PYROSCOPE_AUTH_TOKEN=
 PYROSCOPE_SERVER_ADDRESS=
+PYROSCOPE_ENVIRONMENT=
 
 DATABASE_DEFAULT_IDLE_IN_TX_SESSION_TIMEOUT=
 DATABASE_DEFAULT_LOCK_TIMEOUT=
