--- a/core/services/chainlink/testdata/dump/full-custom.env
+++ b/core/services/chainlink/testdata/dump/full-custom.env
@@ -230,6 +230,7 @@ AUTO_PPROF_GOROUTINE_THRESHOLD=50
 
 PYROSCOPE_AUTH_TOKEN=pyroscope-token
 PYROSCOPE_SERVER_ADDRESS=http://localhost:4040
+PYROSCOPE_ENVIRONMENT=tests
 
 DATABASE_DEFAULT_IDLE_IN_TX_SESSION_TIMEOUT=1h
 DATABASE_DEFAULT_LOCK_TIMEOUT=1m
