--- a/core/services/chainlink/testdata/dump/full-custom.toml
+++ b/core/services/chainlink/testdata/dump/full-custom.toml
@@ -164,6 +164,7 @@ GoroutineThreshold = 50
 [Pyroscope]
 AuthToken = 'pyroscope-token'
 ServerAddress = 'http://localhost:4040'
+Environment = 'tests'
 
 [Sentry]
 Debug = true
