--- a/internal/config/docs.toml
+++ b/internal/config/docs.toml
@@ -437,8 +437,10 @@ GoroutineThreshold = 5000 # Default
 [Pyroscope]
 # ServerAddress sets the address that will receive the profile logs. It enables the profiling service.
 ServerAddress = '' # Default
-# AuthToken configures the needed Auth Token on Server Addresses that require an Auth Token.
+# AuthToken sets the needed Auth Token on Server Addresses that require an Auth Token.
 AuthToken = '' # Default
+# Environment sets the target environment tag in which profiles will be added to.
+Environment = 'mainnet' # Default
 
 [Sentry]
 # **ADVANCED**
