--- a/core/chains/evm/config/v2/defaults/Arbitrum_Rinkeby.toml
+++ b/core/chains/evm/config/v2/defaults/Arbitrum_Rinkeby.toml
@@ -4,14 +4,16 @@ LinkContractAddress = "0x615fBe6372676474d9e6933d310469c9b68e9726"
 OCR.ContractConfirmations = 1
 
 [GasEstimator]
-BumpThreshold = 0
 Mode = 'FixedPrice'
-PriceDefault = '0.1 gwei'
-PriceMax = '0.1 gwei'
-PriceMin = '0.1 gwei'
-FeeCapDefault = '0.1 gwei'
+# Arbitrum uses something like a Vickrey auction model where gas price represents a "max bid". In practice we usually pay much less
+PriceDefault = '1000 gwei'
+PriceMax = '1000 gwei' # Fix the gas price
+PriceMin = '1000 gwei' # Fix the gas price
+# Disable gas bumping on arbitrum
+BumpThreshold = 0
 
 [GasEstimator.BlockHistory]
+# Force an error if someone set GAS_UPDATER_ENABLED=true by accident; we never want to run the block history estimator on arbitrum
 BlockHistorySize = 0
 
 [HeadTracker]
