--- a/internal/config/docs.toml
+++ b/internal/config/docs.toml
@@ -430,6 +430,14 @@ MemThreshold = '4gb' # Default
 # GoroutineThreshold is the maximum number of actively-running goroutines the node can spawn before profiling begins.
 GoroutineThreshold = 5000 # Default
 
+[Pyroscope]
+# ServerAddress sets the address that will receive the profile logs. It enables the profiling service.
+ServerAddress = 'http://localhost:4040' # Example
+# AuthToken sets the needed Auth Token on Server Addresses that require an Auth Token.
+AuthToken = 'randomly-oauth-generated-token' # Example
+# Environment sets the target environment tag in which profiles will be added to.
+Environment = 'mainnet' # Default
+
 [Sentry]
 # **ADVANCED**
 # Debug enables printing of Sentry SDK debug messages.
