--- a/.github/workflows/ci-core.yml
+++ b/.github/workflows/ci-core.yml
@@ -11,7 +11,7 @@ jobs:
       fail-fast: false
       matrix:
         cmd: ["go_core_tests", "go_core_race_tests"]
-    name: Core Tests
+    name: Core Tests ${{ matrix.cmd }}
     runs-on: ubuntu-latest
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/chainlink_test?sslmode=disable
@@ -33,6 +33,14 @@ jobs:
           --health-timeout 5s
           --health-retries 5
     steps:
+      - name: Collect Metrics
+        id: collect-gha-metrics
+        uses: smartcontractkit/push-gha-metrics-action@v1
+        with:
+          basic-auth: ${{ secrets.GRAFANA_CLOUD_BASIC_AUTH }}
+          hostname: ${{ secrets.GRAFANA_CLOUD_HOST }}
+          this-job-name: Core Tests ${{ matrix.cmd }}
+        continue-on-error: true
       - name: Checkout the repo
         uses: actions/checkout@v2
       - name: Set up Go
