--- a/core/services/chainlink/testdata/dump/empty-strings.env
+++ b/core/services/chainlink/testdata/dump/empty-strings.env
@@ -116,6 +116,7 @@ ETH_GAS_BUMP_THRESHOLD=
 ETH_GAS_BUMP_WEI=
 EVM_GAS_FEE_CAP_DEFAULT=
 ETH_GAS_LIMIT_DEFAULT=
+ETH_GAS_LIMIT_MAX=
 ETH_GAS_LIMIT_MULTIPLIER=
 ETH_GAS_LIMIT_TRANSFER=
 ETH_GAS_PRICE_DEFAULT=
