core/chains/evm: support Arbitrum queue/pool full errors with new L2Full ClientError

--- a/core/chains/evm/config/v2/defaults/Arbitrum_Rinkeby.toml
+++ b/core/chains/evm/config/v2/defaults/Arbitrum_Rinkeby.toml
@@ -5,11 +5,12 @@ OCR.ContractConfirmations = 1
 
 [GasEstimator]
 Mode = 'Arbitrum'
-LimitDefault = 10_000_000
-LimitMax = 500_000_000
-LimitTransfer = 80_000
+LimitMax = 1_000_000_000
 # Arbitrum uses the suggested gas price, so we don't want to place any limits on the minimum
 PriceMin = '0'
+PriceDefault = '0.1 gwei'
+PriceMax = '1000 gwei'
+FeeCapDefault = '1000 gwei'
 # Disable gas bumping on arbitrum
 BumpThreshold = 0
 
