--- a/internal/config/docs.toml
+++ b/internal/config/docs.toml
@@ -577,7 +577,7 @@ PriceMin = '1 gwei' # Default
 # Some job types, such as Keeper jobs, might set their own gas limit unrelated to this value.
 LimitDefault = 500_000 # Default
 # LimitMax sets a maximum for _estimated_ gas limits. This currently only applies to `Arbitrum` `GasEstimatorMode`.
-LimitMax = 5_000_000 # Default
+LimitMax = 500_000 # Default
 # LimitOCRJobType overrides LimitDefault for OCR jobs.
 LimitOCRJobType = 100_000 # Example
 # LimitDRJobType overrides LimitDefault for Direct Request jobs.
