--- a/core/chains/evm/config/v2/defaults/fallback.toml
+++ b/core/chains/evm/config/v2/defaults/fallback.toml
@@ -22,7 +22,7 @@ PriceDefault = '20 gwei'
 PriceMax = '100000 gwei'
 PriceMin = '1 gwei'
 LimitDefault = 500_000
-LimitMax = 50_000_000
+LimitMax = 500_000
 LimitMultiplier = '1'
 LimitTransfer = 21_000
 BumpMin = '5 gwei'
