arbitrum nitro: support gas price and limit estimation (#7225)
* core/chains/evm/client: support abitrum nitro 'max fee per gas less than block base fee'

* core/chains/evm: refactor optimism support to include arbitrum for nitro

* core/chains/evm: add Arbitrum gas use estimator

* core/chains/evm: add EVMGasLimitMax

* core/chains/evm: support Arbitrum queue/pool full errors with new L2Full ClientError

(cherry picked from commit 7e5beefa9aa708c446c925f8de0b0142900f35d2)

--- a/internal/config/docs.toml
+++ b/internal/config/docs.toml
@@ -568,6 +568,8 @@ PriceMin = '1 gwei' # Default
 # LimitDefault sets default gas limit for outgoing transactions. This should not need to be changed in most cases.
 # Some job types, such as Keeper jobs, might set their own gas limit unrelated to this value.
 LimitDefault = 500_000 # Default
+# LimitMax sets a maximum for _estimated_ gas limits. This currently only applies to `Arbitrum` `GasEstimatorMode`.
+LimitMax = 500_000 # Default
 # LimitOCRJobType overrides LimitDefault for OCR jobs.
 LimitOCRJobType = 100_000 # Example
 # LimitDRJobType overrides LimitDefault for Direct Request jobs.
