--- a/core/chains/evm/config/v2/defaults/Metis_Rinkeby.toml
+++ b/core/chains/evm/config/v2/defaults/Metis_Rinkeby.toml
@@ -5,7 +5,7 @@ MinIncomingConfirmations = 1
 OCR.ContractConfirmations = 1
 
 [BalanceMonitor]
-BlockDelay = 0
+Enabled = true
 
 [GasEstimator]
 Mode = 'L2Suggested'
