--- a/core/chains/evm/config/v2/defaults/Optimism_Mainnet.toml
+++ b/core/chains/evm/config/v2/defaults/Optimism_Mainnet.toml
@@ -9,7 +9,7 @@ OCR.ContractConfirmations = 1
 TxResendAfterThreshold = '15s'
 
 [BalanceMonitor]
-BlockDelay = 0
+Enabled = true
 
 [GasEstimator]
 Mode = 'L2Suggested'
