--- a/core/chains/evm/config/v2/defaults/Simulated.toml
+++ b/core/chains/evm/config/v2/defaults/Simulated.toml
@@ -6,7 +6,7 @@ TxReaperThreshold = '0s'
 TxResendAfterThreshold = '0s'
 
 [BalanceMonitor]
-BlockDelay = 0
+Enabled = true
 
 [GasEstimator]
 Mode = 'FixedPrice'
