--- a/core/chains/evm/config/v2/defaults/Avalanche_Fuji.toml
+++ b/core/chains/evm/config/v2/defaults/Avalanche_Fuji.toml
@@ -4,6 +4,7 @@ LinkContractAddress = '0x0b9d5D9136855f6FEc3c0993feE6E9CE8a297846'
 LogPollInterval = '3s'
 MinIncomingConfirmations = 1
 OCR.ContractConfirmations = 1
+RPCBlockQueryDelay = 2
 
 [GasEstimator]
 Mode = 'BlockHistory'
@@ -13,7 +14,6 @@ PriceMin = '25 gwei'
 
 [GasEstimator.BlockHistory]
 BlockHistorySize = 24
-BlockDelay = 2
 
 [HeadTracker]
 BlockEmissionIdleWarningThreshold = '15s'
