--- a/core/services/chainlink/testdata/config-multi-chain-effective.toml
+++ b/core/services/chainlink/testdata/config-multi-chain-effective.toml
@@ -38,6 +38,7 @@ MinimumContractPayment = '0.1 link'
 NonceAutoSync = true
 OperatorFactoryAddress = '0x3E64Cd889482443324F91bFA9c84fE72A511f48A'
 RPCDefaultBatchSize = 100
+RPCBlockQueryDelay = 1
 TxReaperInterval = '1h0m0s'
 TxReaperThreshold = '168h0m0s'
 TxResendAfterThreshold = '1m0s'
@@ -45,7 +46,6 @@ UseForwarders = false
 
 [EVM.BalanceMonitor]
 Enabled = true
-BlockDelay = 1
 
 [EVM.GasEstimator]
 Mode = 'BlockHistory'
@@ -67,7 +67,6 @@ TipCapMinimum = '1 wei'
 
 [EVM.GasEstimator.BlockHistory]
 BatchSize = 4
-BlockDelay = 1
 BlockHistorySize = 4
 TransactionPercentile = 50
 
@@ -111,6 +110,7 @@ MinimumContractPayment = '0.1 link'
 NonceAutoSync = true
 OperatorFactoryAddress = '0x8007e24251b1D2Fc518Eb843A701d9cD21fe0aA3'
 RPCDefaultBatchSize = 100
+RPCBlockQueryDelay = 1
 TxReaperInterval = '1h0m0s'
 TxReaperThreshold = '168h0m0s'
 TxResendAfterThreshold = '1m0s'
@@ -118,7 +118,6 @@ UseForwarders = false
 
 [EVM.BalanceMonitor]
 Enabled = true
-BlockDelay = 1
 
 [EVM.GasEstimator]
 Mode = 'BlockHistory'
@@ -140,7 +139,6 @@ TipCapMinimum = '1 wei'
 
 [EVM.GasEstimator.BlockHistory]
 BatchSize = 4
-BlockDelay = 1
 BlockHistorySize = 4
 TransactionPercentile = 50
 
@@ -178,6 +176,7 @@ MinIncomingConfirmations = 5
 MinimumContractPayment = '0.00001 link'
 NonceAutoSync = true
 RPCDefaultBatchSize = 100
+RPCBlockQueryDelay = 10
 TxReaperInterval = '1h0m0s'
 TxReaperThreshold = '168h0m0s'
 TxResendAfterThreshold = '1m0s'
@@ -185,7 +184,6 @@ UseForwarders = false
 
 [EVM.BalanceMonitor]
 Enabled = true
-BlockDelay = 13
 
 [EVM.GasEstimator]
 Mode = 'FixedPrice'
@@ -207,7 +205,6 @@ TipCapMinimum = '1 wei'
 
 [EVM.GasEstimator.BlockHistory]
 BatchSize = 4
-BlockDelay = 10
 BlockHistorySize = 24
 TransactionPercentile = 60
 
