--- a/core/services/chainlink/testdata/dump/evm-overrides.toml
+++ b/core/services/chainlink/testdata/dump/evm-overrides.toml
@@ -15,6 +15,7 @@ MinimumContractPayment = '123456789'
 NonceAutoSync = true
 OperatorFactoryAddress = '0xae4E781a6218A8031764928E88d457937A954fC3'
 RPCDefaultBatchSize = 10
+RPCBlockQueryDelay = 6
 TxReaperInterval = '10h0m0s'
 TxReaperThreshold = '1m0s'
 TxResendAfterThreshold = '5m0s'
@@ -47,7 +48,6 @@ TipCapMinimum = '7 wei'
 
 [EVM.GasEstimator.BlockHistory]
 BatchSize = 13
-BlockDelay = 6
 BlockHistorySize = 56
 EIP1559FeeCapBufferBlocks = 97
 TransactionPercentile = 42
@@ -97,6 +97,7 @@ MinimumContractPayment = '123456789'
 NonceAutoSync = true
 OperatorFactoryAddress = '0xae4E781a6218A8031764928E88d457937A954fC3'
 RPCDefaultBatchSize = 10
+RPCBlockQueryDelay = 6
 TxReaperInterval = '10h0m0s'
 TxReaperThreshold = '1m0s'
 TxResendAfterThreshold = '5m0s'
@@ -126,7 +127,6 @@ FeeCapDefault = '45.678912345 gwei'
 
 [EVM.GasEstimator.BlockHistory]
 BatchSize = 13
-BlockDelay = 6
 BlockHistorySize = 56
 EIP1559FeeCapBufferBlocks = 97
 TransactionPercentile = 42
@@ -162,6 +162,7 @@ MinimumContractPayment = '123456789'
 NonceAutoSync = true
 OperatorFactoryAddress = '0xae4E781a6218A8031764928E88d457937A954fC3'
 RPCDefaultBatchSize = 10
+RPCBlockQueryDelay = 6
 TxReaperInterval = '10h0m0s'
 TxReaperThreshold = '1m0s'
 TxResendAfterThreshold = '5m0s'
@@ -191,7 +192,6 @@ FeeCapDefault = '45.678912345 gwei'
 
 [EVM.GasEstimator.BlockHistory]
 BatchSize = 13
-BlockDelay = 6
 BlockHistorySize = 56
 EIP1559FeeCapBufferBlocks = 97
 TransactionPercentile = 42
@@ -229,6 +229,7 @@ MinimumContractPayment = '123456789'
 NonceAutoSync = true
 OperatorFactoryAddress = '0xae4E781a6218A8031764928E88d457937A954fC3'
 RPCDefaultBatchSize = 10
+RPCBlockQueryDelay = 6
 TxReaperInterval = '10h0m0s'
 TxReaperThreshold = '1m0s'
 TxResendAfterThreshold = '5m0s'
@@ -258,7 +259,6 @@ FeeCapDefault = '45.678912345 gwei'
 
 [EVM.GasEstimator.BlockHistory]
 BatchSize = 13
-BlockDelay = 6
 BlockHistorySize = 56
 EIP1559FeeCapBufferBlocks = 97
 TransactionPercentile = 42
