--- a/internal/config/docs.toml
+++ b/internal/config/docs.toml
@@ -523,6 +523,15 @@ NonceAutoSync = true # Default
 OperatorFactoryAddress = '0xa5B85635Be42F21f94F28034B7DA440EeFF0F418' # Example
 # RPCDefaultBatchSize is the default batch size for batched RPC calls.
 RPCDefaultBatchSize = 100 # Default
+# **ADVANCED**
+# RPCBlockQueryDelay controls the number of blocks to trail behind head in the block history estimator and balance monitor.
+# For example, if this is set to 3, and we receive block 10, block history estimator will fetch block 7.
+#
+# CAUTION: You might be tempted to set this to 0 to use the latest possible
+# block, but it is possible to receive a head BEFORE that block is actually
+# available from the connected node via RPC, due to race conditions in the code of the remote ETH node. In this case you will get false
+# "zero" blocks that are missing transactions.
+RPCBlockQueryDelay = 1 # Default
 # TxReaperInterval controls how often the EthTx reaper will run.
 TxReaperInterval = '1h' # Default
 # TxReaperThreshold indicates how old an EthTx ought to be before it can be reaped.
@@ -535,10 +544,6 @@ UseForwarders = false # Default
 [EVM.BalanceMonitor]
 # Enabled balance monitoring for all keys.
 Enabled = true # Default
-# **ADVANCED**
-# BlockDelay is the number of blocks that the balance monitor trails behind head. This is required when load balancing
-# across multiple nodes announce a new head, then route a request to a different node which does not have this head yet.
-BlockDelay = 1 # Default
 
 [EVM.GasEstimator]
 # Mode controls what type of gas estimator is used.
@@ -668,14 +673,6 @@ TipCapMinimum = '1 wei' # Default
 # BatchSize sets the maximum number of blocks to fetch in one batch in the block history estimator.
 # If the `BatchSize` variable is set to 0, it defaults to `EVM.RPCDefaultBatchSize`.
 BatchSize = 4 # Default
-# BlockDelay controls the number of blocks that the block history estimator trails behind head.
-# For example, if this is set to 3, and we receive block 10, block history estimator will fetch block 7.
-#
-# CAUTION: You might be tempted to set this to 0 to use the latest possible
-# block, but it is possible to receive a head BEFORE that block is actually
-# available from the connected node via RPC, due to race conditions in the code of the remote ETH node. In this case you will get false
-# "zero" blocks that are missing transactions.
-BlockDelay = 1 # Default
 # BlockHistorySize controls the number of past blocks to keep in memory to use as a basis for calculating a percentile gas price.
 BlockHistorySize = 8 # Default
 # **ADVANCED**
